# vert

./: .gitignore  Cargo.toml  LICENSE  README.md  i.rs  todo.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: component.rs  lib.rs  tests.rs  trait_reflection.rs
examples/: README.md  assets.rs.txt  basic.rs  basic.rs.txt  bloom.rs  bloom.rs.txt  raycasting.rs.deprecated  specialization.rs  ui.rs  ui.rs.nw  ui.rs.txt  ui2.rs  ui_image.rs  ui_padding.rs  ui_padding.rs.txt  utils.rs
framework/: Cargo.toml  README.md  Shader.md  color_mesh.wgsl
framework/assets/: color_mesh.stump.wgsl
framework/examples/: app.rs  basic.rs  batteries.rs  bloom.rs  bloom.rs.txt  movecam.rs  raycasting.rs  renderers.rs  renderers.rs.deprecated  shader.rs  vert.rs  vert.rs.txt
framework/notes/: fonts.md  rendering.md  shader_stump.deprecated.rs  systems.md
framework/src/: app.deprecated.rs  app.rs  constants.rs  flow.rs  lib.rs  module.rs  modules.rs  modules_ext.rs  state.rs  utils.rs
framework/src/app/: dependencies.rs  function_handle.rs  handle.rs  mod.rs  module.rs
framework/src/batteries/: graphics_settings_controller.rs  mod.rs  simple_cam_controller.rs  spawn_some_cubes.rs
framework/src/elements/: camera3d.rs  color.rs  mod.rs  texture.rs  transform.rs
framework/src/modules/: camera.rs  egui.rs  graphics.rs  graphics_context.rs  input.rs  mod.rs  module_ext.rs  modules_ext.rs  scheduler.rs  screen_size.rs  time.rs  ui.rs  watcher.rs  winit_main.rs
framework/src/modules/assets/: asset_loader.rs  fetchable_asset.rs  mod.rs
framework/src/modules/assets/asset_store/: key.rs  mod.rs
framework/src/modules/batteries/: fly_cam.rs  mod.rs
framework/src/modules/egui/: mod.rs
framework/src/modules/graphics/: elements.rs  graphics_context.rs  mod.rs  renderer.rs  settings.rs  shader.rs  texture.rs
framework/src/modules/graphics/elements/: buffer.rs  camera.rs  color.rs  color_mesh.rs  gizmos.rs  gizmos.wgsl  immediate_geometry.rs  mod.rs  rect.rs  rect_3d.rs  rect_3d.wgsl  screen_space.rs  texture.rs  textured_mesh.md  textured_mesh.wgsl  transform.rs  ui_rect.rs  ui_rect.wgsl
framework/src/modules/graphics/post_processing/: bloom.rs  mod.rs  tonemapping.rs
framework/src/modules/graphics/renderer/: bloom.rs  hdr.wgsl  screen_space.rs
framework/src/modules/graphics/renderer/screen_space/: bloom.frag.wgsl  bloom.rs  mod.rs  tonemapping.frag.wgsl  tonemapping.rs
framework/src/modules/graphics/shader/: bind_group.rs  color_mesh.rs  color_mesh.wgsl  gizmos.rs  mod.rs  renderer.rs  text.rs  to_wgsl.rs  ui_rect.rs  ui_rect.wgsl  vertex.rs  world_rect.rs
framework/src/modules/graphics/statics/: camera.rs  mod.rs  screen_size.rs  static_texture.rs
framework/src/modules/renderer/: mod.rs  screen_texture.rs
framework/src/modules/renderer/main_pass_renderer/: color_mesh.rs  gizmos.rs  gizmos.wgsl  mod.rs  text_renderer.rs  ui_rect.wgsl
framework/src/modules/renderer/post_processing/: bloom.rs  mod.rs  tone_mapping.rs  tonemapping.wgsl
framework/src/modules/ui/: mod.rs  text_rasterizer.rs
framework/src/modulesdeprecated/: time.rs
framework/src/modulesdeprecated/graphics/: screen_textures.rs
framework/src/modulesdeprecated/graphics/elements/: color_mesh.wgsl  immediate_geometry.rs  mod.rs
framework/src/modulesdeprecated/graphics/post_processing/: bloom.wgsl  tonemapping.rs
framework/src/modulesdeprecated/graphics/shader/: gizmos.rs  ui_rect.rs  world_rect.rs
framework/src/modulesdeprecated/graphics/statics/: mod.rs  time.rs
framework/src/systems/: extract.rs  mod.rs
framework/src/utils/: mod.rs  timing_queue.rs  watcher.rs
ideas/: extract.rs  lifetime management.md  module deps.txt  specialization.rs  utils.rs
ideas/trait reflection/: README.md
ideas/v0.1.1/: async systems.md  rendering.md  submodules of the engine.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  collectable.depr.rs  collectable.rs  component.rs  events.rs  extract.rs  framework.rs  lib.rs  lifecycle.rs  main.rs  modules.deprecated.rs  system.rs  trait_companion.rs  trait_reflection.rs  world.rs
src/app/: child_module.rs  dependencies.rs  function_handle.rs  handle.rs  mod.rs  module.rs  plugin.rs
src/arena/: blob.rs  mod.rs  singleton_blob.rs
src/assets/: mod.rs  ptrs.rs
src/batteries/: fly_cam.rs  graphics_settings_controller.rs  mod.rs  simple_cam_controller.rs  spawn_some_cubes.rs
src/elements/: buffer.rs  camera3d.rs  mod.rs  (+8 more)
(+74 files in other folders)
