
[workspace]
members = ["core", "framework"]

[package]
name = "vert"
version = "0.1.0"
edition = "2021"
authors = ["Tadeo Hepperle"]
description = "Game engine framework using type erased arenas"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.75"
nohash-hasher = "0.2.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
rand = "0.8.5"
rand_chacha = "0.3.1"
smallvec = "1.11.2"
syn = { version = "2.0.39", features = ["extra-traits", "full"] }
