
[workspace]
members = ["core", "framework"]
exclude = ["core/examples/arenas"]

[package]
name = "vert"
version = "0.1.0"
edition = "2021"
authors = ["Tadeo Hepperle"]
description = "Game engine framework using type erased arenas"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.75"
smallvec = "1.11.2"
