[package]
name = "vert"
version = "0.1.1"
edition = "2021"
authors = ["Tadeo Hepperle"]
description = "The 51th Rust Game Engine, to write the 6th Game in Rust"
readme = "README.md"
license = "MIT"

[dependencies]
vert-macros = { version = "0.1.1", path = "./macros" }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs", "full"] }
glam = { version = "0.24.2", features = ["bytemuck"] }
wgpu = { version = "0.18.0", features = ["naga"] }
winit = { version = "0.29.3", features = ["rwh_05"] }
egui = "0.25.0"
egui-wgpu = "0.25.0"
image = "0.24.7"
anyhow = "1.0.75"
smallvec = "1.11.2"
rand = "0.8.5"
bytemuck = { version = "1.14.0", features = ["derive"] }
reqwest = "0.11.22"
fontdue = "0.8.0"
etagere = "0.2.10"
heck = "0.4.1"
indoc = "2.0.4"
notify = "6.1.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
slotmap = "1.0.7"
bumpalo = "3.14.0"

[profile.dev.package."*"]
opt-level = 3
