[package]
name = "vert-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs", "full"] }
glam = { version = "0.24.2", features = ["bytemuck"] }
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
egui = { git = "https://github.com/fornwall/egui.git", branch = "winit-0.29" }
egui-wgpu = { git = "https://github.com/fornwall/egui.git", branch = "winit-0.29" }
egui_demo_lib = { git = "https://github.com/fornwall/egui.git", branch = "winit-0.29" }
image = "0.24.7"
anyhow = { workspace = true }
smallvec = { workspace = true }
rand = "0.8.5"
bytemuck = { version = "1.14.0", features = ["derive"] }
vert-core = { path = "../core" }
atomic_refcell = "0.1.13"
reqwest = "0.11.22"


[profile.dev.package."*"]
opt-level = 3
