[package]
name = "vert_macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "vert_macros"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
syn = { version = "*", features = ["full"] }
proc-macro2 = "*"
